k8s/apps/monitoring/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Grafana"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "grafana.png"
    gethomepage.dev/description: "Monitoring & Observability"
    gethomepage.dev/href: "https://grafana.lan"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=grafana"
    gethomepage.dev/siteMonitor: "http://kube-prometheus-stack-grafana.monitoring.svc:80"
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`grafana.lan`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls:
    secretName: grafana-tls
